Fix aligment of the button on Safari

--- a/src/Shark.Fido2.Portal/wwwroot/css/site.css
+++ b/src/Shark.Fido2.Portal/wwwroot/css/site.css
@@ -212,6 +212,10 @@ body {
         border-right: none;
         border-bottom: 1px solid #e0e0e0;
     }
+
+    .btn-block {
+        width: auto;
+    }
 }
 
 .notyf__icon {
